# bob

./: Cargo.toml  README.md  example-config.yaml
.github/workflows/: pages.yaml
bob/: Cargo.toml  build.rs
bob-cli/: Cargo.toml
bob-cli/src/: lib.rs
bob/doc/: index.html
bob/doc/css/: style.css
bob/src/: cli.rs  main.rs
bob/src/config/: middleware.rs  mod.rs  modules.rs
bob/src/tls/: client.rs  mod.rs  server.rs
docs/: 00-index.md  01-overview.md  02-architecture.md  03-modules.md  04-middleware.md  05-configuration.md  06-examples.md  README.md
src/: cli.rs  config.rs  main.rs  tls.rs
src/config/: middleware.rs  mod.rs  modules.rs
src/middleware/: mod.rs  payload.rs
src/middleware/modsecurity/: mod.rs
src/modules/: factory.rs  guard.rs  mod.rs  payload.rs  rev_proxy.rs  service.rs  utils.rs
src/modules/fastcgi/: factory.rs  mod.rs  service.rs
src/modules/fastcgi/pool/: conn.rs  mod.rs
src/modules/file_server/: error.rs  factory.rs  mod.rs  path_buf.rs  resolve.rs  service.rs
src/modules/reverse_proxy/: config.rs  factory.rs  mod.rs  service.rs  utils.rs
src/modules/utils/: error.rs  mod.rs  path_buf.rs
src/tls/: server.rs
