[package]
name = "bob-cli"
version = "0.1.0"
edition = "2024"

[features]
default    = ['authn', 'fastcgi', 'fileserver', 'rproxy']
authn      = []
fileserver = []
rproxy     = []
fastcgi    = []

[dependencies]
actix-http = { version = "3.11.0", default-features = false }
clap = { version = "4.5.45", features = ["derive"] }
humantime = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
