[package]
name = "bob"
version = "0.1.0"
edition = "2024"

[features]
default     = ['fileserver', 'rproxy', 'fastcgi', 'middleware']
middleware  = ['authn', 'modsecurity', 'rewrite']
fileserver  = ['bob-cli/fileserver', 'dep:actix-files']
rproxy      = ['bob-cli/rproxy', 'dep:actix-revproxy', 'dep:awc']
fastcgi     = ['bob-cli/fastcgi', 'dep:actix-fastcgi']
modsecurity = ['dep:actix-modsecurity']
rewrite     = ['dep:actix-rewrite']
authn       = ['bob-cli/authn', 'dep:actix-authn', 'dep:actix-session', 'dep:rpassword']

# documentation features
doc         = []
schema      = ['bob-cli/schema', 'dep:schemars', 'dep:serde_json']

[dependencies]
actix-authn = { version = "0.1.0", optional = true, git = "https://github.com/imgurbot12/actix-services.git" }
actix-chain = { version = "0.1.0", git = "https://github.com/imgurbot12/actix-services.git" }
actix-fastcgi = { version = "0.1.0", optional = true, git = "https://github.com/imgurbot12/actix-services.git" }
actix-files = { version = "0.6.6", git = "https://github.com/imgurbot12/actix-web.git", branch = "develop", optional = true }
actix-modsecurity = { version = "0.1.2", optional = true, git = "https://github.com/imgurbot12/actix-services.git" }
actix-revproxy = { version = "0.2.0", optional = true, features = ["rustls-0_23"], git = "https://github.com/imgurbot12/actix-services.git" }
actix-rewrite = { version = "0.1.1", optional = true, git = "https://github.com/imgurbot12/actix-services.git" }
actix-sanitize = { version = "0.1.0", git = "https://github.com/imgurbot12/actix-services.git" }
actix-service = "2.0.3"
actix-session = { version = "0.10.1", optional = true, features = ["cookie-session"] }
actix-tls = { version = "3.4.0", features = ["rustls-0_23-webpki-roots"] }
actix-web = { version = "4.11.0", features = ["experimental-io-uring", "rustls-0_23"] }
anyhow = "1.0.98"
awc = { version = "3.7.0", optional = true, git = "https://github.com/imgurbot12/actix-web.git", branch = "develop" }
bob-cli = { version = "0.1.0", path = "../bob-cli", default-features = false }
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
futures-core = { version = "0.3.31", default-features = false }
glob = "0.3.2"
humantime = "2.2.0"
log = "0.4.27"
rpassword = { version = "7.4.0", optional = true }
rustls = "0.23.29"
schemars = { version = "1.0.4", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", optional = true }
serde_yaml = "0.9.34"

[build-dependencies]
bob-cli = { version = "0.1.0", path = "../bob-cli" }
clap_builder = "4.5.44"
clap_mangen = "0.2.29"
